fixed footer; straightened out table; stuck to principle that production beats perfection

--- a/Wireframe/style.css
+++ b/Wireframe/style.css
@@ -80,6 +80,7 @@ footer {
   left: 0;
   width: 100%;
   text-align: center;
+  background-color: #00ffcc;
 }
 /* ====== Articles Grid Layout ====
 Setting the rules for how articles are placed in the main element.
